[tool.poetry]
name = "pylivetrader"
version = "0.1.0"
description = ""
authors = ["Travis Cammack <traviscammack@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
statsmodels = "^0.13.5"
scipy = "^1.9.3"
numpy = "^1.24.1"
Bottleneck = "^1.3.5"
pytz = "^2022.7"
Logbook = "^1.5.3"
astor = "^0.8.1"
trading-calendars = "^2.1.1"
click = "^8.1.3"
PyYAML = "^6.0"
ipython = "^8.7.0"
alpaca-trade-api = "^2.3.0"
pandas = "^1.5.2"
pandas-datareader = "^0.10.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
pytest-runner = "^6.0.0"
responses = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
